hover + Animation like/cascade/check(a revoir)

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                             <p class="restaurant__location">Ménilmontant</p>
                                     </div>    
                                     <div class="restaurant-favorite">
-                                        <i class="fa-regular fa-heart"></i>
+                                        <i class="fa-regular fa-heart heart-white"></i><i class="fa-solid fa-heart heart-color"></i>
                                     </div>
                                 </div>
                             </a>                
@@ -74,7 +74,7 @@
                                             <p class="restaurant__location">Charonne</p>
                                     </div>      
                                     <div class="restaurant-favorite">
-                                        <i class="fa-regular fa-heart"></i>
+                                        <i class="fa-regular fa-heart heart-white"></i><i class="fa-solid fa-heart heart-color"></i>
                                     </div>
                                 </div>
                             </a>
@@ -88,7 +88,7 @@
                                                 <p class="restaurant__location">Cité Rouge</p>
                                         </div> 
                                         <div class="restaurant-favorite">
-                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-regular fa-heart heart-white"></i><i class="fa-solid fa-heart heart-color"></i>
                                         </div>
                                     </div>
                             </a>
@@ -102,7 +102,7 @@
                                                 <p class="restaurant__location">Folie-Méricourt</p>
                                         </div>
                                         <div class="restaurant-favorite">
-                                            <i class="fa-regular fa-heart"></i>
+                                            <i class="fa-regular fa-heart heart-white"></i><i class="fa-solid fa-heart heart-color"></i>
                                         </div>
                                     </div>
                             </a>
