--- a/menu_2_la_note_enchantée.html
+++ b/menu_2_la_note_enchantée.html
@@ -19,86 +19,118 @@
             <section id="menu-card"><!--haut de la carte menu-->
                 <img class="menu-card__image" src="images/menu_2.jpg" alt="La note enchantée">
                     <div class="menu-card__top">
-                        <h1 class="menu-card__title">La note enchantée <i class="fa-regular fa-heart"></i></h1>
-                            
+                        <h1 class="menu-card__title">La note enchantée</h1>
+                        <div class="favorite-heart">
+                            <i class="fa-regular fa-heart heart-white"></i><i class="fa-solid fa-heart heart-color"></i>
+                        </div>
                     </div>
                     <div class="menus">
                         <div class="entrance"><!--les entrées-->
                             <h2 class="meal__title">entrées</h2>
-                                <div class="card-meal">
+                                <div class="card-meal child--1">
                                     <h3 class="card-meal__name">Ravioles de foie gras</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Accompagnés de leur crème à la truffe</p>
                                                 <p class="card-meal__price">25€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--2">
                                     <h3 class="card-meal__name">Caviar osciètre</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Sur blini à la farine de blé noir</p>
                                                 <p class="card-meal__price">35€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--3">
                                     <h3 class="card-meal__name">Homard et espuma de potiron</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Mariné aux zestes d'orange</p>
                                                 <p class="card-meal__price">20€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--4">
                                     <h3 class="card-meal__name">Foie gras de canard cuit entier</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Confiture de figue et pain toasté</p>
                                                 <p class="card-meal__price">35€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
                         </div>
                         <div class="dish"><!--les plats-->
                             <h2 class="meal__title">plats</h2>
-                                <div class="card-meal">
+                                <div class="card-meal child--1">
                                     <h3 class="card-meal__name">Noix de coquilles Saint-Jacques</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Sur lit de purée de céleri-rave</p>
                                                 <p class="card-meal__price">40€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--2">
                                     <h3 class="card-meal__name">Langoustine poêlée</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Purée de patate douce</p>
                                                 <p class="card-meal__price">35€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--3">
                                     <h3 class="card-meal__name">Mijoté de queue de boeuf</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Et riz sauvage aux zests de citron</p>
                                                 <p class="card-meal__price">44€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
                         </div>
                         <div class="dessert"><!--les desserts-->
                             <h2 class="meal__title">desserts</h2>
-                                <div class="card-meal">
+                                <div class="card-meal child--1">
                                     <h3 class="card-meal__name">Macaron noisette et chocolat</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Glace au caramel brun et sel de Guérande</p>
                                                 <p class="card-meal__price">18€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--2">
                                     <h3 class="card-meal__name">Baba au rhum revisité</h3>
-                                        <div class="overflow-text__meal">  
+                                        <div class="card-meal__overflow-text">  
                                             <p class="card-meal__desc">Avec son coulis de citron</p>
                                                 <p class="card-meal__price">22€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--3">
                                     <h3 class="card-meal__name">Tarte au citron meringuée</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Destructurée</p>
                                                 <p class="card-meal__price">23€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
                         </div>
