--- a/menu_4_le_délice_des_sens.html
+++ b/menu_4_le_délice_des_sens.html
@@ -19,79 +19,108 @@
             <section id="menu-card"><!--haut de la carte menu-->
                 <img class="menu-card__image" src="images/menu_4.jpg" alt="Le délice des sens">
                     <div class="menu-card__top">
-                        <h1 class="menu-card__title">Le délice des sens <i class="fa-regular fa-heart"></i></h1>
-                            
+                        <h1 class="menu-card__title">Le délice des sens</h1>
+                        <div class="favorite-heart">
+                            <i class="fa-regular fa-heart heart-white"></i><i class="fa-solid fa-heart heart-color"></i>
+                        </div>
                     </div>
                     <div class="menus">
                         <div class="entrance"><!--les entrées-->
                             <h2 class="meal__title">entrées</h2>
-                                <div class="card-meal">
+                                <div class="card-meal child--1">
                                     <h3 class="card-meal__name">Tartare de thon</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Assaisonné au yuzu</p>
                                                 <p class="card-meal__price">25€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--2">
                                     <h3 class="card-meal__name">Bouchée de homard croustillant</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Et sa farandole de petits légumes</p>
                                                 <p class="card-meal__price">35€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--3">
                                     <h3 class="card-meal__name">Velouté de cèpes</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Aux truffes</p>
                                                 <p class="card-meal__price">20€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
                         </div>
                         <div class="dish"><!--les plats-->
                             <h2 class="meal__title">plats</h2>
-                                <div class="card-meal">
+                                <div class="card-meal child--1">
                                     <h3 class="card-meal__name">Poulet rôti aux herbes de provence</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Et sa crème de truffe</p>
                                                 <p class="card-meal__price">40€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                     </div>
-                                    <div class="card-meal">
+                                    <div class="card-meal child--2">
                                         <h3 class="card-meal__name">Langouste rôtie</h3>
-                                        <div class="overflow-text__meal">
-                                            <p class="card-meal__desc">Et ses légumes de saison</p>
-                                                <p class="card-meal__price">35€</p>
-                                        </div>
+                                            <div class="card-meal__overflow-text">
+                                                <p class="card-meal__desc">Et ses légumes de saison</p>
+                                                    <p class="card-meal__price">35€</p>
+                                                        <div class="card-meal__animation">
+                                                            <i class="fa-solid fa-circle-check icon"></i>
+                                                        </div> 
+                                            </div>
                                     </div>
-                                    <div class="card-meal">
+                                    <div class="card-meal child--3">
                                         <h3 class="card-meal__name">Côte de boeuf angus</h3>
-                                            <div class="overflow-text__meal">
+                                            <div class="card-meal__overflow-text">
                                                 <p class="card-meal__desc">Et sa purée de panais</p>
                                                     <p class="card-meal__price">44€</p>
+                                                        <div class="card-meal__animation">
+                                                            <i class="fa-solid fa-circle-check icon"></i>
+                                                        </div> 
                                             </div>
                                     </div>
                         </div>
                         <div class="dessert"><!--les desserts-->
                             <h2 class="meal__title">desserts</h2>
-                                <div class="card-meal">
+                                <div class="card-meal child--1">
                                     <h3 class="card-meal__name">Farandole de desserts</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Du chef</p>
                                                 <p class="card-meal__price">18€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--2">
                                     <h3 class="card-meal__name">Crème brulée</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Revisitée</p>
                                                 <p class="card-meal__price">22€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--3">
                                     <h3 class="card-meal__name">Tiramisu</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">À la noisette</p>
                                                 <p class="card-meal__price">23€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
                         </div>
