--- a/menu_1_la_palette_du_gout.html
+++ b/menu_1_la_palette_du_gout.html
@@ -19,78 +19,108 @@
             <section id="menu-card"><!--haut de la carte menu-->
                 <img class="menu-card__image" src="images/menu_1.jpg" alt="La palette du goût">
                     <div class="menu-card__top">
-                        <h1 class="menu-card__title">La palette du goût<i class="fa-regular fa-heart"></i></h1>
+                        <h1 class="menu-card__title">La palette du goût</h1>
+                            <div class="favorite-heart">
+                                <i class="fa-regular fa-heart heart-white"></i><i class="fa-solid fa-heart heart-color"></i>
+                            </div>
                     </div>
                     <div class="menus">
                         <div class="entrance"><!--les entrées-->
                             <h2 class="meal__title">entrées</h2>
-                                <div class="card-meal">
+                                <div class="card-meal child--1">
                                     <h3 class="card-meal__name">Fricassée d'escargot</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Au piment d'espelette</p>
                                                 <p class="card-meal__price">25€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--2">
                                     <h3 class="card-meal__name">Foie gras de canard mi-cuit</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Et ses copeaux de truffe noire</p>
                                                 <p class="card-meal__price">35€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--3">
                                     <h3 class="card-meal__name">Oeuf au plat</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Assaisonné à la truffe sur lit de caviar</p>
                                                 <p class="card-meal__price">20€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
                         </div>
                         <div class="dish"><!--les plats-->
                             <h2 class="meal__title">plats</h2>
-                                <div class="card-meal">
+                                <div class="card-meal child--1">
                                     <h3 class="card-meal__name">Filet de boeuf aux herbes</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Accompagné de sa rimbambelle de légumes</p>
                                                 <p class="card-meal__price">40€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--2">
                                     <h3 class="card-meal__name">Parmentier de queue de boeuf</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">À la truffe noire sur sa purée de panais</p>
                                                 <p class="card-meal__price">35€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--3">
                                     <h3 class="card-meal__name">Filet de Turbot</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Aux agrumes</p>
                                                 <p class="card-meal__price">44€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
                         </div>
                         <div class="dessert"><!--les desserts-->
                             <h2 class="meal__title">desserts</h2>
-                                <div class="card-meal">
+                                <div class="card-meal child--1">
                                     <h3 class="card-meal__name">Paris-Brest</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Revisité</p>
                                                 <p class="card-meal__price">18€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--2">
                                     <h3 class="card-meal__name">Macaron au chocolat d'exception</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Et glace à la vanille de Madagascar</p>
                                                 <p class="card-meal__price">22€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--3">
                                     <h3 class="card-meal__name">Mousse au chocolat</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Au piment d'espelette et à la truffe noire</p>
                                                 <p class="card-meal__price">23€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>  
                         </div>
