--- a/menu_3_à_la_française.html
+++ b/menu_3_à_la_française.html
@@ -19,79 +19,108 @@
             <section id="menu-card"><!--haut de la carte menu-->
                 <img class="menu-card__image" src="images/menu_3.jpg" alt="À la française">
                     <div class="menu-card__top">
-                        <h1 class="menu-card__title">À la française <i class="fa-regular fa-heart"></i></h1>
-                            
+                        <h1 class="menu-card__title">À la française</h1>
+                        <div class="favorite-heart">
+                            <i class="fa-regular fa-heart heart-white"></i><i class="fa-solid fa-heart heart-color"></i>
+                        </div>  
                     </div>
                     <div class="menus">
                         <div class="entrance"><!--les entrées-->
                             <h2 class="meal__title">entrées</h2>
-                                <div class="card-meal">
+                                <div class="card-meal child--1">
                                     <h3 class="card-meal__name">Tartare de poulpe acidulé</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Aux zests d'orange</p>
                                                 <p class="card-meal__price">25€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--2">
                                     <h3 class="card-meal__name">Velouté de légumes d'antan</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Carotte, panais, topinambour</p>
                                                 <p class="card-meal__price">35€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--3">
                                     <h3 class="card-meal__name">Soupe à l'oignon</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Revisitée</p>
                                                 <p class="card-meal__price">20€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
                         </div>
                         <div class="dish"><!--les plats-->
                             <h2 class="meal__title">plats</h2>
-                                <div class="card-meal">
+                                <div class="card-meal child--1">
                                     <h3 class="card-meal__name">Coquilles Saint-Jacques</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Accompagnées d'une purée de panais</p>
                                                 <p class="card-meal__price">40€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--2">
                                     <h3 class="card-meal__name">Magret de canard</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Et parmentier de pommes de terres</p>
                                                 <p class="card-meal__price">35€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--3">
                                     <h3 class="card-meal__name">Pigeonneau d'Ille-et-Vilaine</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Sur son lit de gnocchis aux légumes</p>
                                                 <p class="card-meal__price">44€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
                         </div>
                         <div class="dessert"><!--les desserts-->
                             <h2 class="meal__title">desserts</h2>
-                                <div class="card-meal">
+                                <div class="card-meal child--1">
                                     <h3 class="card-meal__name">Pétales de violettes glacés</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Et purée de noisettes</p>
                                                 <p class="card-meal__price">18€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--2">
                                     <h3 class="card-meal__name">Fondant au chocolat</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Revisité</p>
                                                 <p class="card-meal__price">22€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
-                                <div class="card-meal">
+                                <div class="card-meal child--3">
                                     <h3 class="card-meal__name">Millefeuille croustillant</h3>
-                                        <div class="overflow-text__meal">
+                                        <div class="card-meal__overflow-text">
                                             <p class="card-meal__desc">Myrtilles et pâte d'amande</p>
                                                 <p class="card-meal__price">23€</p>
+                                                    <div class="card-meal__animation">
+                                                        <i class="fa-solid fa-circle-check icon"></i>
+                                                    </div> 
                                         </div>
                                 </div>
                         </div>
