--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
     </style> 
     <title>Ohmyfood - Accueil</title>
     <body>
+        <div class="loader">
+            <span class="letter">O</span>
+            <span class="letter">h</span>
+            <span class="letter">m</span>
+            <span class="letter">y</span>
+            <span class="letter">f</span>
+            <span class="letter">o</span>
+            <span class="letter">o</span>
+            <span class="letter">d</span>
+            <span class="letter">.</span>
+            <span class="letter">.</span>
+            <span class="letter">.</span>
+        </div>
         <header> <!--logo-->
             <img class="logo" src="images/ohmyfood.png" alt="Ohmyfood"/>
         </header>
@@ -116,7 +129,7 @@
                     <li><i class="fa-solid fa-utensils"></i> Proposer un restaurant</li>
                     <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
                     <li>Mentions légales</li>
-                    <li>Contact</li>
+                    <li><a href="mailto:Ohmyfood-contact@gmail.com">Contact</a></li>
                 </ul>
         </footer>
     </body>
