--- a/menu_2_la_note_enchantée.html
+++ b/menu_2_la_note_enchantée.html
@@ -144,7 +144,7 @@
                     <li><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
                     <li><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
                     <li>Mentions légales</li>
-                    <li>Contact</li>
+                    <li><a href="mailto:Ohmyfood-contact@gmail.com">Contact</a></li>
                 </ul>
         </footer>
     </body>
