--- a/index.html
+++ b/index.html
@@ -2,27 +2,26 @@
 <html lang="fr">
     <meta charset ="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
     <link rel="stylesheet" type="text/css" href="Sass/Styles.css">
-    <link rel="stylesheet" type="text/css" href="CSS/Normalize.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css" integrity="sha512-1hsteeq9xTM5CX6NsXiJu3Y/g+tj+IIwtZMtTisemEv3hx+S9ngaW4nryrNcPM4xGzINcKbwUJtojslX2KG+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css" integrity="sha512-1hsteeq9xTM5CX6NsXiJu3Y/g+tj+IIwtZMtTisemEv3hx+S9ngaW4nryrNcPM4xGzINcKbwUJtojslX2KG+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
-        @import url('https://fonts.googleapis.com/css2? family=Roboto:wght@100;300;400;500;700;900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap,family=Roboto:wght@100;300;400;500;700;900&display=swap');
     </style> 
     <title>Ohmyfood - Accueil</title>
     <body>
         <div class="loader">
-            <span class="letter">O</span>
-            <span class="letter">h</span>
-            <span class="letter">m</span>
-            <span class="letter">y</span>
-            <span class="letter">f</span>
-            <span class="letter">o</span>
-            <span class="letter">o</span>
-            <span class="letter">d</span>
-            <span class="letter">.</span>
-            <span class="letter">.</span>
-            <span class="letter">.</span>
+            <span class="letter _n1">O</span>
+            <span class="letter _n2">h</span>
+            <span class="letter _n3">m</span>
+            <span class="letter _n4">y</span>
+            <span class="letter _n5">f</span>
+            <span class="letter _n6">o</span>
+            <span class="letter _n7">o</span>
+            <span class="letter _n8">d</span>
+            <span class="letter _n9">.</span>
+            <span class="letter _n10">.</span>
+            <span class="letter _11">.</span>
         </div>
         <header> <!--logo-->
             <img class="logo" src="images/ohmyfood.png" alt="Ohmyfood"/>
