--- a/menu_3_à_la_française.html
+++ b/menu_3_à_la_française.html
@@ -3,11 +3,9 @@
     <meta charset ="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="Sass/Styles.css">
-    <link rel="stylesheet" type="text/css" href="CSS/Normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.css" integrity="sha512-1hsteeq9xTM5CX6NsXiJu3Y/g+tj+IIwtZMtTisemEv3hx+S9ngaW4nryrNcPM4xGzINcKbwUJtojslX2KG+DQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
-        @import url('https://fonts.googleapis.com/css2? family=Roboto:wght@100;300;400;500;700;900&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap,family=Roboto:wght@100;300;400;500;700;900&display=swap');
     </style> 
     <title>Menu - À la française</title>
     <body>
