--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html lang="fr">
     <meta charset ="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <script src="https://kit.fontawesome.com/8700b94a6c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="Sass/Styles.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap,family=Roboto:wght@100;300;400;500;700;900&display=swap');
-        @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css');
     </style> 
     <title>Ohmyfood - Accueil</title>
     <body>
