--- a/menu_3_à_la_française.html
+++ b/menu_3_à_la_française.html
@@ -3,9 +3,9 @@
     <meta charset ="utf-8">
     <meta name ="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="Sass/Styles.css">
+    <script src="https://kit.fontawesome.com/8700b94a6c.js" crossorigin="anonymous"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap,family=Roboto:wght@100;300;400;500;700;900&display=swap');
-        @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css');
     </style> 
     <title>Menu - À la française</title>
     <body>
